# bevy_debugger_mcp

./: .gitignore  BACKLOG.md  BEVY_0_16_MIGRATION.md  CHANGELOG.md  CI_INTEGRATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  EPIC_6_BEVY_INTEGRATION_REPORT.md  INSTALLATION.md  MCP_TEST_SUITE_ANALYSIS.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_REVIEW.md  STATUS.md  STORIES.md  build.rs  code_review_bevdbg013.md  code_review_bevdbg014.md  install.sh  issues.md  messages.md  setup-claude.sh  state_management_analysis.md  team_chat.md
.github/workflows/: ci.yml  screenshot_tests.yml
assets/shaders/: highlight_material.wgsl
benches/: optimization_benchmarks.rs  performance_benchmarks.rs  query_optimization_benchmarks.rs  regression_benchmarks.rs
book/: MACOS_SERVICE.md  SCREENSHOT_SETUP.md  USAGE_GUIDE.md
config/: config.example.toml
debug_sessions/checkpoints/: 081575dc-93cb-410f-b56e-339c4f8f777f.json  09619a92-938e-47dd-9d80-4bc136c6bb8b.json  09b2bf61-23f2-4ee4-bab1-758b91ea0e40.json  17bce460-1a04-41ae-b78d-5673c1b4a3bf.json  1bcfb021-08ed-4db8-a60f-9c7a03857ee3.json  36a7ae86-2958-4547-a89b-fc1fa8518e1f.json  436b9d6c-c0b9-4056-a5b3-b33b6a2dee1a.json  5127d33e-f233-4b6d-84ed-92022ff9e77b.json  577bc9b6-f9c2-49b9-8ebf-7705c0043c88.json  8899894d-9e2d-4c9e-b9d6-a848a3b85fce.json  90f7340c-0a4d-4069-8ccc-e8a8e47a4805.json  9db4972e-ef31-4064-95b0-66db06a4bef9.json  b7c71f96-9d66-4650-96a6-896b6be9bd52.json  e2806d9f-4210-4c84-a423-ea5b2e1bd2ec.json  ea8f843a-ba9b-46da-84ec-e971089faa74.json  fbfea822-64ca-4569-9070-de18437200e2.json
docs/: STDIO_FIX.md  api-reference.md  quick-start.md
docs/api/: README.md
docs/installation/: bevy-setup.md  claude-code.md
docs/tools/: README.md  detect_anomaly.md  experiment.md  hypothesis.md  observe.md  replay.md  stress_test.md
docs/troubleshooting/: README.md
docs/tutorials/: README.md
examples/: basic_setup.rs  screenshot_setup.rs
homebrew/: bevy-debugger-mcp.rb
launchd/: com.bevy-debugger-mcp.plist
scripts/: bevy-debugger-control  homebrew-formula.rb  install.sh  quick-setup-macos.sh  service.sh  setup-claude.sh  test-screenshots.sh  uninstall.sh
src/: anomaly_detector.rs  benchmark_runner.rs  bevy_observability_integration.rs  bevy_reflection.rs  brp_client.rs  brp_client_refactored.rs  brp_client_v2.rs  brp_command_handler.rs  brp_integration.rs  brp_messages.rs  brp_validation.rs  checkpoint.rs  circuit_breaker.rs  cli.rs  command_cache.rs  compile_opts.rs  config.rs  connection_pool.rs  dead_letter_queue.rs  deadlock_detector.rs  debug_brp_handler.rs  debug_command_processor.rs  diagnostics.rs  entity_inspector.rs  error.rs  experiment_system.rs  heartbeat.rs  hot_reload.rs  hypothesis_system.rs  issue_detector.rs  issue_detector_processor.rs  lazy_init.rs  lib.rs  lock_contention_benchmark.rs  main.rs  mcp_server.rs  mcp_server_v2.rs  mcp_tools.rs  memory_optimization_tracker.rs  memory_pools.rs  (+34 more)
src/bevy_reflection/: custom_inspectors.rs  inspector.rs  mod.rs  reflection_queries.rs  type_registry_tools.rs
src/observability/: alerts.rs  health.rs  metrics.rs  mod.rs  telemetry.rs  tracing.rs
src/security/: audit.rs  auth.rs  config.rs  mod.rs  rate_limit.rs  rbac.rs
src/tools/: anomaly.rs  experiment.rs  hypothesis.rs  mod.rs  observe.rs  observe_optimized.rs  orchestration.rs  replay.rs  replay_v2.rs  stress.rs
src/visual_overlays/: colliders.rs  custom_markers.rs  entity_highlight.rs  mod.rs  performance_metrics.rs  system_flow.rs  transforms.rs
tests/: bevy_reflection_integration_tests.rs  brp_bevy_16_compatibility.rs  brp_refactor_integration_tests.rs  brp_validation_tests.rs  caching_integration_tests.rs  comprehensive_integration_test.rs  debug_command_integration_tests.rs  dependency_audit_test.rs  e2e_performance_with_bevy_game.rs  entity_inspector_integration_tests.rs  epic_6_integration_test.rs  error_recovery_tests.rs  feature_flag_combination_tests.rs  integration_test.rs  issue_detection_integration_tests.rs  lazy_init_integration_tests.rs  mcp_integration_test_suite.rs  mcp_protocol_compliance_tests.rs  memory_optimization_tests.rs  memory_pooling_integration_tests.rs  memory_profiler_integration_tests.rs  ml_integration_tests.rs  observability_integration_test.rs  orchestration_integration_test.rs  pattern_learning_tests.rs  performance_budget_integration_tests.rs  performance_optimizations_integration_tests.rs  performance_regression_tests.rs  playback_tests.rs  production_resilience_tests.rs  query_builder_integration_tests.rs  resource_manager_tests.rs  rmcp_api_compatibility_test.rs  screenshot_e2e_tests.rs  screenshot_integration_wrapper.rs  security_integration_test.rs  session_management_integration_tests.rs  simple_integration_test.rs  stdio_integration_test.rs  system_profiler_integration_tests.rs  (+8 more)
tests/fixtures/: animated_test_game.rs  complex_ecs_game.rs  mod.rs  performance_test_game.rs  static_test_game.rs
tests/helpers/: memory_tracker.rs  mod.rs  performance_measurement.rs  query_generators.rs  screenshot_test_utils.rs  test_game_process.rs
tests/integration/: harness.rs  mod.rs
tests/mocks/: mcp_client.rs  mod.rs
