[package]
name = "bevy_debugger_mcp"
version = "0.1.0"
edition = "2021"
authors = ["ladvien <ladvien@example.com>"]
description = "AI-assisted debugging for Bevy games through Claude Code using Model Context Protocol"
homepage = "https://github.com/ladvien/bevy_debugger_mcp"
repository = "https://github.com/ladvien/bevy_debugger_mcp"
readme = "README.md"
license = "GPL-3.0"
keywords = ["bevy", "debugging", "mcp", "claude", "gamedev"]
categories = ["game-development", "development-tools", "command-line-utilities"]
rust-version = "1.70"
exclude = [
    "target/*",
    ".git/*",
    "launchd/*",
    "scripts/homebrew-formula.rb",
    "docs/CLAUDE_SUBAGENT_GUIDE.md"
]

[[bin]]
name = "bevy-debugger-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
dashmap = "6.0"
strsim = "0.11"
rand = "0.9.2"
rand_distr = "0.5.1"
async-trait = "0.1.89"
flate2 = "1.1.2"
sha2 = "0.10.9"
bincode = "1"
lazy_static = "1.5.0"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-metrics = "0.3"
sysinfo = "0.30"
hostname = "0.3"
rustc_version_runtime = "0.3"
atty = "0.2"

[dev-dependencies]
tokio-test = "0.4"

